[package]
name = "emimg"
description.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[workspace]
resolver = "2"
members = ["emimg_image", "emimg_renderer", "emimg_sandbox"]

[workspace.package]
description = "Emimg is a petite, sandboxed image viewer."
authors = ["Josh Megnauth <jo.sh@tutanota.com>"]
version = "0.1.0"
repository = "https://github.com/joshuamegnauth54/emimg"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[features]
default = ["default-formats", "no-libc", "wayland", "x11"]
default-formats = ["emimg_image/default-formats"]
# Build default with rust-lang/libc instead of eyra and c-gull
default-rust-libc = ["default-formats", "rust-libc", "wayland", "x11"]

# winit
wayland = ["emimg_renderer/wayland"]
x11 = ["emimg_renderer/x11"]

# Use eyra/rustix for libc
no-libc = [
  "std",
  "emimg_image/no-libc",
  "emimg_renderer/no-libc",
  "emimg_sandbox/no-libc",
]

# Use the real libc bindings; rust-lang/libc
rust-libc = ["emimg_sandbox/libc-rust"]

# Profiling
dhat-ad-hoc = ["dhat"]
dhat-heap = ["dhat"]

[workspace.dependencies]
ash = "0.38"
cap-std = "4"
dhat = "0.3"
eyra = "0.22"
glam = "0.33"
image = { version = "0.25", default-features = false }
image-extras = "0.1"
libc = "0.2"
rustix = "1"
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu" }

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
features = ["bytemuck"]

[workspace.dependencies.winit]
version = "0.30"
default-features = false
features = ["rwh_06"]

[dependencies]
emimg_image = { path = "emimg_image" }
emimg_renderer = { path = "emimg_renderer" }
emimg_sandbox = { path = "emimg_sandbox" }

dhat = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies.std]
package = "eyra"
version = "0.22"
optional = true
